--- a/Bar_test1.html
+++ b/Bar_test1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>第一个 ECharts 实例</title>
+    <title>ECharts_柱状图实例1</title>
     <script src="https://cdn.staticfile.org/echarts/4.8.0/echarts.min.js"></script>
 	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
@@ -10,6 +10,7 @@
 
 </head>
 <body>
+	<a href="https://xzr00000001.github.io/">返回首页</a>
     <div id="main" style="width:600px;height:400px;"></div>
      <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
@@ -18,7 +19,7 @@
         // 指定图表的配置项和数据
         var option = {
             title: {
-                text: '第一个 ECharts 实例'
+                text: 'ECharts_柱状图实例1'
             },
             tooltip: {},
             legend: {
@@ -44,6 +45,5 @@
 myChart.setOption(option);
 
     </script>
-   
 </body>
 </html>
