--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <meta charset="UTF-8">
 <title>数据分析盒子</title>
 <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome/css/font-awesome.min.css"/>
+<script src="https://cdn.jsdelivr.net/gh/stevenjoezhang/live2d-widget/autoload.js"></script>
 <style>
 /* Custom Styles */
     ul.nav-tabs{
@@ -56,7 +58,7 @@
         </div>
         <div class="col-xs-9">
             <h2 id="section-1">柱状图</h2>
-            <Iframe src="URL" width="1000" height="1000" scrolling="NO" frameborder="0"></iframe>
+            <Iframe src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" width="1000" height="1000" scrolling="NO" frameborder="0"></iframe>
             <hr>
 </div>
     </div>
