--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="col-xs-9">
             <h2 id="section-1">柱状图</h2>
-            <Iframe src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" width="1000" height="1000" scrolling="NO" frameborder="0"></iframe>
+            <iframe src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" width="1000" height="1000" scrolling="NO" frameborder="0"></iframe>
             <hr>
 </div>
     </div>
