--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <div class="row">
         <div class="col-xs-3" id="myScrollspy">
             <ul class="nav nav-tabs nav-stacked" data-spy="affix" data-offset-top="125">
-                <li class="active"><a href="#section-1">第一部分--柱状图</a></li>
+                <li class="active"><a href="#section-1">柱状图实例</a></li>
             </ul>
         </div>
         <div class="col-xs-9">
-            <h2 id="section-1">柱状图</h2>
+            <h2 id="section-1">柱状图1</h2>
             <iframe src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" width="1000" height="1000" scrolling="NO" frameborder="0"></iframe>
             <hr>
 </div>
