--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body data-spy="scroll" data-target="#myScrollspy">
 <div class="container">
    <div class="jumbotron">
-        <h1>Bootstrap Affix</h1>
+        <h1>数据分析模型实例合集</h1>
     </div>
     <div class="row">
         <div class="col-xs-3" id="myScrollspy">
