--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="col-xs-9">
             <h2 id="section-1">柱状图1</h2>
-            <iframe src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" width="1000" height="1000" scrolling="NO" frameborder="1"></iframe>
+            <iframe name="ifd" src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" onload="this.height=ifd.document.body.scrollHeight" width="100%" scrolling="NO" frameborder="1"></iframe>
             <hr>
 </div>
     </div>
