--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="col-xs-9">
             <h2 id="section-1">柱状图1</h2>
-            <p> &emsp &emsp此处是常规的柱状图展示实例1,可以进行不同范围下的数据展示</p>
+            <p> &emsp; &emsp;此处是常规的柱状图展示实例1,可以进行不同范围下的数据展示</p>
             <iframe name="ifd" src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" onload="this.height=ifd.document.body.scrollHeight;this.width=ifd.document.body.scrollWidth" scrolling="NO" frameborder="1"></iframe>
             <hr>
 </div>
