--- a/index.html
+++ b/index.html
@@ -57,10 +57,14 @@
             </ul>
         </div>
         <div class="col-xs-9">
-            <h2 id="section-1">柱状图1</h2>
+            <h3 id="section-1">柱状图简单实例1</h3>
             <p> &emsp; &emsp;此处是常规的柱状图展示实例1,可以进行不同范围下的数据展示</p>
             <iframe name="ifd" src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" onload="this.height=ifd.document.body.scrollHeight;this.width=ifd.document.body.scrollWidth" scrolling="NO" frameborder="1"></iframe>
             <hr>
+            <h3 id="section-1">B站全站排行榜数据实例</h3>
+            <p> &emsp; &emsp;此处是对B站全站排行榜的爬虫并数据可视化展示实例,可以进行不同范围下的数据展示</p>
+            <iframe name="ifd" src="https://xzr00000001.github.io/Bar_test/Bar_test2.html" onload="this.height=ifd.document.body.scrollHeight;this.width=ifd.document.body.scrollWidth" scrolling="NO" frameborder="1"></iframe>
+            
 </div>
     </div>
 </div>
