--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <hr>
             <h3>B站全站排行榜数据实例</h3>
             <p> &emsp; &emsp;此处是对B站全站排行榜的爬虫并数据可视化展示实例,可以进行不同范围下的数据展示</p>
-            <iframe name="ifd" src="https://xzr00000001.github.io/Bar_test/Bar_test2.html" onload="this.height=ifd.document.body.scrollHeight;this.width=ifd.document.body.scrollWidth" scrolling="NO" frameborder="1"></iframe>
+            <iframe name="ifd2" src="https://xzr00000001.github.io/Bar_test/Bar_test2.html" onload="this.height=ifd2.document.body.scrollHeight;this.width=ifd2.document.body.scrollWidth" scrolling="NO" frameborder="1"></iframe>
             
 </div>
     </div>
