--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
     ul.nav-tabs.affix{
         top: 30px; /* Set the top position of pinned element */
     }
+    .row .nav > li .dropdown-menu {
+margin: 0;
+}
+.row .nav > li:hover .dropdown-menu {
+display: block;
+}
 </style>
 </head>
 <body data-spy="scroll" data-target="#myScrollspy">
@@ -53,7 +59,18 @@
     <div class="row">
         <div class="col-xs-3" id="myScrollspy">
             <ul class="nav nav-tabs nav-stacked" data-spy="affix" data-offset-top="125">
-                <li class="active"><a href="#section-1">柱状图实例</a></li>
+                    <li class="dropdown-menu">
+                        <a href="#">柱状图实例</a>
+                    </li>
+                <ul id="ul1" class="nav nav-tabs nav-stacked" data-spy="affix" data-offset-top="125">
+                    <li>
+                        <a href="#section-1">柱状图简单实例1</a>
+                    </li>
+                    <li>
+                        <a href="#section-2">B站全站排行柱状图</a>
+                    </li>
+                </ul>
+                
             </ul>
         </div>
         <div class="col-xs-9">
@@ -61,7 +78,7 @@
             <p> &emsp; &emsp;此处是常规的柱状图展示实例1,可以进行不同范围下的数据展示</p>
             <iframe name="ifd" src="https://xzr00000001.github.io/Bar_test/Bar_test1.html" onload="this.height=ifd.document.body.scrollHeight;this.width=ifd.document.body.scrollWidth" scrolling="NO" frameborder="1"></iframe>
             <hr>
-            <h3>B站全站排行榜数据实例</h3>
+            <h3 id="section-2">B站全站排行榜数据实例</h3>
             <p> &emsp; &emsp;此处是对B站全站排行榜的爬虫并数据可视化展示实例,可以进行不同范围下的数据展示</p>
             <iframe name="ifd2" src="https://xzr00000001.github.io/Bar_test/Bar_test2.html" onload="this.height=ifd2.document.body.scrollHeight;this.width=ifd2.document.body.scrollWidth" scrolling="NO" frameborder="1"></iframe>
             
