--- a/Bar_test/Bar_test2.html
+++ b/Bar_test/Bar_test2.html
@@ -666,6 +666,19 @@
             }
         }
     },
+            "dataZoom": [
+        {
+            "show": true,
+            "type": "slider",
+            "realtime": true,
+            "start": 0,
+            "end": 5,
+            "orient": "horizontal",
+            "zoomLock": false,
+            "bottom": "0%",
+            "filterMode": "filter"
+        }
+    ]
 };
         chart_915ddeebf20249b7beb2e0ac14d71c52.setOption(option_915ddeebf20249b7beb2e0ac14d71c52);
     </script>
