--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <div class="col-xs-3" id="myScrollspy">
             <ul class="nav nav-tabs nav-stacked" data-spy="affix" data-offset-top="125">
                     <li class="active">
-                        <a href="section-1">柱状图实例</a>
+                        <a href="#section-1">柱状图实例</a>
                     </li>
                     <li class="active">
-                        <a href="section-1">B站全站排行柱状图实例</a>
+                        <a href="#section-2">B站全站排行柱状图实例</a>
                     </li>
                
             </ul>
