--- a/Bar_test/Bar_test2.html
+++ b/Bar_test/Bar_test2.html
@@ -625,6 +625,10 @@
                 "title": "\u4fdd\u5b58\u4e3a\u56fe\u7247",
                 "pixelRatio": 1
             },
+            "restore": {
+                "show": true,
+                "title": "\u8fd8\u539f"
+            },
             "dataView": {
                 "show": true,
                 "title": "\u6570\u636e\u89c6\u56fe",
@@ -641,6 +645,17 @@
                 "buttonColor": "#c23531",
                 "buttonTextColor": "#fff"
             },
+            "dataZoom": {
+                "show": true,
+                "title": {
+                    "zoom": "\u533a\u57df\u7f29\u653e",
+                    "back": "\u533a\u57df\u7f29\u653e\u8fd8\u539f"
+                },
+                "icon": {},
+                "xAxisIndex": false,
+                "yAxisIndex": false,
+                "filterMode": "filter"
+            },
             "magicType": {
                 "show": true,
                 "type": [
@@ -653,20 +668,9 @@
                 },
                 "icon": {}
             },
-            "brush": {
-                "icon": {},
-                "title": {
-                    "rect": "\u77e9\u5f62\u9009\u62e9",
-                    "polygon": "\u5708\u9009",
-                    "lineX": "\u6a2a\u5411\u9009\u62e9",
-                    "lineY": "\u7eb5\u5411\u9009\u62e9",
-                    "keep": "\u4fdd\u6301\u9009\u62e9",
-                    "clear": "\u6e05\u9664\u9009\u62e9"
-                }
-            }
         }
     },
-            "dataZoom": [
+    "dataZoom": [
         {
             "show": true,
             "type": "slider",
