--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
         top: 30px; /* Set the top position of pinned element */
     }
 </style>
+    <script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?9f12f8e17161fee9ffd6fed1e2030c32";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 </head>
 <body data-spy="scroll" data-target="#myScrollspy">
 <div class="container">
