--- a/Bar_test/Bar_test2.html
+++ b/Bar_test/Bar_test2.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <title>Awesome-pyecharts</title>
             <script type="text/javascript" src="https://assets.pyecharts.org/assets/echarts.min.js"></script>
-
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?261cd3d70f42ecdfc32ef12bc2bea73d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 </head>
 <body>
     <div id="915ddeebf20249b7beb2e0ac14d71c52" class="chart-container" style="width:900px; height:500px;"></div>
