--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<head>
+	<meta charset="UTF-8">
+	<title>RPG游戏记录盒子</title>
+	<link rel="stylesheet" href="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.js"></script>
+	<script src="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
 <div class="container-fluid">
 	<div class="row-fluid">
 		<div class="span12">
@@ -95,7 +104,7 @@
 					</div>
 					<div class="row-fluid">
 						<div class="span4">
-							<img alt="140x140" src="img/rpg_img/a.jpg" class="img-polaroid" />
+							<img alt="140x140" src="img/rpg_img/s1.png" class="img-polaroid" />
 						</div>
 						<div class="span8">
 							<p>
@@ -159,3 +168,5 @@
 		</div>
 	</div>
 </div>
+</body>
+</html>
