--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ var _hmt = _hmt || [];
                     <li class="active">
                         <a href="#section-2">B站全站排行柱状图实例</a>
                     </li>
+                    <li class="active">
+                        <a href="https://xzr00000001.github.io/RpgMaker_Set/info.html">RPG记录合集</a>
+                    </li>
                
             </ul>
         </div>
