--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -148,16 +148,16 @@
 					</h1>
 					<div class="row-fluid">
 						<div class="span3">
-							<img alt="140x140" src="img/pixel_img/slimu_happy.png" />
+							<img alt="140x140" src="img/pixel_img/01.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="img/pixel_img/slimu_angry.png" />
+							<img alt="140x140" src="img/pixel_img/02.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="img/pixel_img/slimu_puzzle.png" />
+							<img alt="140x140" src="img/pixel_img/04.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="img/pixel_img/slimu_like.png" />
+							<img alt="140x140" src="img/pixel_img/05.png" />
 						</div>
 					</div>
 					<p class="text-center">
