--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -104,7 +104,7 @@
 					</div>
 					<div class="row-fluid">
 						<div class="span4">
-							<img alt="140x140" src="img/rpg_img/s1.png" class="img-polaroid" />
+							<img alt="140x140" src="./rpg_img/s1.png" class="img-polaroid" />
 						</div>
 						<div class="span8">
 							<p>
@@ -148,16 +148,16 @@
 					</h1>
 					<div class="row-fluid">
 						<div class="span3">
-							<img alt="140x140" src="img/pixel_img/01.png" />
+							<img alt="140x140" src="./pixel_img/01.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="img/pixel_img/02.png" />
+							<img alt="140x140" src="./pixel_img/02.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="img/pixel_img/04.png" />
+							<img alt="140x140" src="./pixel_img/04.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="img/pixel_img/05.png" />
+							<img alt="140x140" src="./pixel_img/05.png" />
 						</div>
 					</div>
 					<p class="text-center">
