--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -7,8 +7,8 @@
 	<script src="https://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-	<div class="row-fluid">
+<div class="container">
+	<div class="row">
 		<div class="span12">
 			<h2 class="text-center">
 				<em>Rpgmaker游戏的小盒子</em>
