--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -104,7 +104,7 @@
 					</div>
 					<div class="row-fluid">
 						<div class="span4">
-							<img alt="140x140" src="./rpg_img/s1.png" class="img-polaroid" />
+							<img alt="140x140" src="./rpg_img/s1.PNG.png" class="img-polaroid" />
 						</div>
 						<div class="span8">
 							<p>
