--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -9,8 +9,8 @@
         <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="container-fluid">
-	<div class="row-fluid">
+<div class="container">
+	<div class="row">
 		<div class="span12">
 			<h2 class="text-center">
 				<em>Rpgmaker游戏的小盒子</em>
@@ -61,7 +61,7 @@
 				</div>
 				
 			</div>
-			<div class="row-fluid">
+			<div class="row">
 				<div class="span2">
 					<ul class="nav nav-list well">
 						<li class="nav-header">
@@ -104,7 +104,7 @@
 							尝试使用MV3D插件制作一款射击游戏的试验品，看看rpgmaker3d的可能性0.0！~ 虽然只有四方向但是相信未来会有全方位的！
 						</p>
 					</div>
-					<div class="row-fluid">
+					<div class="row">
 						<div class="span4">
 							<img alt="140x140" src="./rpg_img/s1.PNG" class="img-polaroid" />
 						</div>
@@ -120,7 +120,7 @@
 							</h2>
 						</div>
 					</div>
-					<div class="row-fluid">
+					<div class="row">
 						<div class="span12">
 							<h3>
 								可怜的进度1
@@ -148,18 +148,18 @@
 					<h1 id="xiangsu" class="text-center text-info">
 						<strong>像素画的念想</strong>
 					</h1>
-					<div class="row-fluid">
+					<div class="row">
 						<div class="span3">
-							<img alt="140x140" src="./pixel_img/01.png" />
+							<img alt="140x140" src="./pixel_img/01.jpg" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="./pixel_img/02.png" />
+							<img alt="140x140" src="./pixel_img/02.jpg" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="./pixel_img/04.png" />
+							<img alt="140x140" src="./pixel_img/04.jpg" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="./pixel_img/05.png" />
+							<img alt="140x140" src="./pixel_img/05.jpg" />
 						</div>
 					</div>
 					<p class="text-center">
