--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -151,16 +151,16 @@
 					</h1>
 					<div class="row">
 						<div class="span3">
-							<img alt="140x140" src="./pixel_img/01.jpg" />
+							<img alt="140x140" src="./pixel_img/01.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="./pixel_img/02.jpg" />
+							<img alt="140x140" src="./pixel_img/02.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="./pixel_img/04.jpg" />
+							<img alt="140x140" src="./pixel_img/04.png" />
 						</div>
 						<div class="span3">
-							<img alt="140x140" src="./pixel_img/05.jpg" />
+							<img alt="140x140" src="./pixel_img/05.png" />
 						</div>
 					</div>
 					<p class="text-center">
