--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -6,7 +6,6 @@
 	<title>RPG游戏记录盒子</title>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-        <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
@@ -83,7 +82,7 @@
 							<a href="#">奇怪的设定集</a>
 						</li>
 						<li>
-							<a href="xiangsu">像素画的念想</a>
+							<a href="#xiangsu">像素画的念想</a>
 						</li>
 						<li class="divider">
 						</li>
