--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -12,121 +12,98 @@
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
-			<nav class="navbar navbar-default" role="navigation">
+			<nav class="navbar navbar-default navbar-inverse navbar-fixed-top" role="navigation">
 				<div class="navbar-header">
-					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#">Brand</a>
+					 <button id="home_b" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button> <a class="navbar-brand" href="#home_b">返回顶上</a>
 				</div>
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
 						<li class="active">
-							 <a href="#">Link</a>
+							 <a href="#rpg_1">RPG记录</a>
 						</li>
 						<li>
-							 <a href="#">Link</a>
+							 <a href="#pixel_1">像素画册子</a>
 						</li>
 						<li class="dropdown">
 							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
 							<ul class="dropdown-menu">
 								<li>
-									 <a href="#">Action</a>
+									 <a href="#">还在建设~</a>
 								</li>
 								<li>
-									 <a href="#">Another action</a>
+									 <a href="#">还在建设~</a>
 								</li>
 								<li>
-									 <a href="#">Something else here</a>
+									 <a href="#">还在建设~</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">Separated link</a>
+									 <a href="#">还在建设~</a>
 								</li>
 								<li class="divider">
 								</li>
 								<li>
-									 <a href="#">One more separated link</a>
+									 <a href="#">还在建设~</a>
 								</li>
 							</ul>
 						</li>
 					</ul>
-					<form class="navbar-form navbar-left" role="search">
+					<form class="navbar-form navbar-left" role="请输入搜索内容~">
 						<div class="form-group">
 							<input type="text" class="form-control" />
-						</div> <button type="submit" class="btn btn-default">Submit</button>
+						</div> <button type="submit" class="btn btn-default">开始搜索</button>
 					</form>
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							 <a href="#">Link</a>
+							 <a href="https://xzr00000001.github.io/">前往数据分析盒子</a>
 						</li>
-						<li class="dropdown">
-							 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown<strong class="caret"></strong></a>
-							<ul class="dropdown-menu">
-								<li>
-									 <a href="#">Action</a>
-								</li>
-								<li>
-									 <a href="#">Another action</a>
-								</li>
-								<li>
-									 <a href="#">Something else here</a>
-								</li>
-								<li class="divider">
-								</li>
-								<li>
-									 <a href="#">Separated link</a>
-								</li>
-							</ul>
-						</li>
+		
 					</ul>
 				</div>
 				
 			</nav>
 			<div class="jumbotron">
 				<h1>
-					Hello, world!
+					死亡鬼屋RM
 				</h1>
 				<p>
-					This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.
-				</p>
-				<p>
-					 <a class="btn btn-primary btn-large" href="#">Learn more</a>
+					<span>尝试使用MV3D插件制作一款射击游戏的试验品，看看rpgmaker3d的可能性0.0！~ 虽然只有四方向但是相信未来会有全方位的！</span>
 				</p>
 			</div>
-		</div>
-	</div>
-	<div class="row clearfix">
-		<div class="col-md-4 column">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				 <a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				 <a class="btn" href="#">View details »</a>
-			</p>
-		</div>
-		<div class="col-md-4 column">
-			<h2>
-				Heading
-			</h2>
-			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				 <a class="btn" href="#">View details »</a>
+			<div class="row clearfix">
+				<div class="col-md-3 column">
+					<img alt="140x140" src="./rpg_img/s1.PNG" class="img-thumbnail" />
+				</div>
+				<div class="col-md-9 column">
+					 <span class="label label-primary">标签</span>
+					<p class="lead text-left text-info">
+						 <em>Git</em> 是一个分布式的版本控制系统，最初由 <strong>Linus Torvalds</strong> 编写，用作Linux内核代码的管理。在推出后，Git在其它项目中也取得了很大成功，尤其是在 <small>Ruby</small> 社区中。
+					</p>
+				</div>
+			</div>
+			<div class="page-header">
+			</div>
+			<h3 class="text-center">
+				像素画练习小盒子
+			</h3>
+			<div class="row clearfix">
+				<div class="col-md-3 column">
+					<img alt="140x140" src="./pixel_img/01.png" />
+				</div>
+				<div class="col-md-3 column">
+					<img alt="140x140" src="./pixel_img/02.png" />
+				</div>
+				<div class="col-md-3 column">
+					<img alt="140x140" src="./pixel_img/04.png" />
+				</div>
+				<div class="col-md-3 column">
+					<img alt="140x140" src="./pixel_img/05.png" />
+				</div>
+			</div>
+			<p class="lead text-center">
+				 开了一个像素画的坑，现在在以制作表情包为第一个目标,第一个主角就是它啦！ 馒头王子！ 走的是像素可爱风啦~ 不断提升画技吧~
 			</p>
 		</div>
 	</div>
