--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -64,7 +64,7 @@
 				</div>
 				
 			</nav>
-			<div class="jumbotron">
+			<div id="rpg_1" class="jumbotron">
 				<h1>
 					死亡鬼屋RM
 				</h1>
@@ -79,11 +79,14 @@
 				<div class="col-md-9 column">
 					 <span class="label label-primary">标签</span>
 					<p class="lead text-left text-info">
-						 <em>Git</em> 是一个分布式的版本控制系统，最初由 <strong>Linus Torvalds</strong> 编写，用作Linux内核代码的管理。在推出后，Git在其它项目中也取得了很大成功，尤其是在 <small>Ruby</small> 社区中。
+						 主角：skr (大碗宽面而来~)
+					</p>
+					<p class="lead text-left text-info">
+						 当前版本：V0.00001.测试版本~仅仅做了两关射击僵尸的关卡以及电梯场景和一个boss~
 					</p>
 				</div>
 			</div>
-			<div class="page-header">
+			<div id="pixel_1" class="page-header">
 			</div>
 			<h3 class="text-center">
 				像素画练习小盒子
