--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -57,7 +57,7 @@
 					</form>
 					<ul class="nav navbar-nav navbar-right">
 						<li>
-							 <a href="https://xzr00000001.github.io/">前往数据分析盒子</a>
+							 <a href="https://xzr00000001.github.io/">前往数据分析盒子&nbsp;&nbsp;</a>
 						</li>
 		
 					</ul>
@@ -77,12 +77,13 @@
 					<img alt="140x140" src="./rpg_img/s1.PNG" class="img-thumbnail" />
 				</div>
 				<div class="col-md-9 column">
-					 <span class="label label-primary">标签</span>
+					 <span class="label label-primary">2020/11/19</span>
+					<hr>
 					<p class="lead text-left text-info">
-						 主角：skr (大碗宽面而来~)
+						 &nbsp;&nbsp;主角：skr (大碗宽面而来~)
 					</p>
 					<p class="lead text-left text-info">
-						 当前版本：V0.00001.测试版本~仅仅做了两关射击僵尸的关卡以及电梯场景和一个boss~
+						 &nbsp;&nbsp;当前版本：V0.00001.测试版本~仅仅做了两关射击僵尸的关卡以及电梯场景和一个boss~
 					</p>
 				</div>
 			</div>
@@ -92,17 +93,17 @@
 				像素画练习小盒子
 			</h3>
 			<div class="row clearfix">
-				<div class="col-md-3 column">
-					<img alt="140x140" src="./pixel_img/01.png" />
+				<div class="col-md-3 column" >
+					<img alt="140x140" src="./pixel_img/01.png" class="img-thumbnail" />
 				</div>
 				<div class="col-md-3 column">
-					<img alt="140x140" src="./pixel_img/02.png" />
+					<img alt="140x140" src="./pixel_img/02.png" class="img-rounded"/>
 				</div>
 				<div class="col-md-3 column">
-					<img alt="140x140" src="./pixel_img/04.png" />
+					<img alt="140x140" src="./pixel_img/04.png" class="img-circle"/>
 				</div>
 				<div class="col-md-3 column">
-					<img alt="140x140" src="./pixel_img/05.png" />
+					<img alt="140x140" src="./pixel_img/05.png" class="img-rounded"/>
 				</div>
 			</div>
 			<p class="lead text-center">
