--- a/RpgMaker_Set/info.html
+++ b/RpgMaker_Set/info.html
@@ -46,7 +46,7 @@
 					死亡鬼屋RM
 				</h1>
 				<p>
-					<span>尝试使用MV3D插件制作一款射击游戏的试验品，看看rpgmaker3d的可能性0.0！~ 虽然只有四方向但是相信未来会有全方位的！</span>
+					<span>&nbsp;&nbsp;&nbsp;&nbsp;尝试使用MV3D插件制作一款射击游戏的试验品，看看rpgmaker3d的可能性0.0！~ 虽然只有四方向但是相信未来会有全方位的！</span>
 				</p>
 			</div>
 			<div class="row clearfix">
