--- a/game_set/slimu_rush2.html
+++ b/game_set/slimu_rush2.html
@@ -4,7 +4,7 @@
 	<meta charset='utf-8' />
 	<meta name='viewport' content='width=device-width, user-scalable=no' />
 	<link id='-gd-engine-icon' rel='icon' type='image/png' href='favicon.png' />
-	<title>2d横版弹幕游戏</title>
+	<title>SLIMU RUSH</title>
 	<style type='text/css'>
 
 		body {
